Latest editing of Decision trees doc

--- a/Decision Trees.Rmd
+++ b/Decision Trees.Rmd
@@ -3,8 +3,8 @@ title: "Decision Trees and Risk"
 author: "Joel Anderson"
 date: "August 19, 2017"
 output:
-  word_document: default
   html_document: default
+  word_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -45,9 +45,9 @@ tree2 <- rpart(survived~age+sex+pclass, data=titan, cp=.02)
 ```
 
 ###Pipeline Risk Decision Tree
-The next example will make use of the full one-million dynamic segment data that was sampled at the beginning of this article to make a decision tree. This will be slightly different than the Titanic example above.  Rather than trying to determine whether a variable would place it in one group or another (classification), the decision tree will determine the effect of variable splits on another dependent variable (regression). i.e how does $x_1. x_2, x_3, etc.$ affect y?
+The next example will make use of the full one-million dynamic segment data that was sampled at the beginning of this article to make a decision tree. This will be slightly different than the Titanic example above.  Rather than trying to determine whether a variable would place it in one group or another (classification), the decision tree will determine the effect of variable splits on another dependent variable (regression). i.e how does $x_1. x_2, x_3, etc.$ affect $y$?
 
-Risk is defined as the product of the Probability of Failure (PoF) and Consequence of Failure (CoF).  Since there are limited options for an operator to affect the consequences of a failure most integrity management efforts (assessments, etc.) are geared toward reducing the probability of failure.   Therefore, this decision tree example will concentrate on the PoF side of the risk equation.  To start out, look at a completed decision tree for the risk dataset and then we will discuss what it is telling us about the risk results.
+Risk is defined as the product of the Probability of Failure (PoF) and Consequence of Failure (CoF).  Outside of pipeline relocation, the options for an operator to affect the consequences of a failure are limited.  Therefore, most integrity management efforts (assessments, etc.) are geared toward reducing the probability of failure. Because of that, this decision tree example will concentrate on the PoF side of the risk equation.  To start out, look at a completed decision tree for the risk dataset and then the discussion will cover what it is telling us about the risk results.
 
 ```{r riskchunk, echo=FALSE, message=FALSE}
 risk_pof <- read.csv("risk_pof.csv")
@@ -61,7 +61,7 @@ In the same way as previously, the tree is read from the top down and then each 
 
 It may have been noticed that the decision tree is only showing three threats out of the nine.  This isn't an error, what this indicates is there is no correlation between the other six threats and PoF.  For instance, Stress Corrosion Cracking (SCC) threat might be high on some segments with a high PoF, yet low on segments that also have a high PoF. Therefore you are not going to be able to draw distinct groups based on SCC.  This shows that SCC is not a consistent driver of the overall risk on a system wide basis.
 
-The value of decision trees is, as in the name implies, in making decisions.  In the above scenario, if a pipeline operator wanted to have largest impact on their risk they should concentrate on their third party and external corrosion threats since outside of pipe replacement, there are limited actions that would affect the manufacturing threat.  In fact, it has been argued that manufacturing, construction and equipment are not "threats" in the sense that a threat is is an independent "force" that has an impact on a pipeline but rather weaknesses that make the it more susceptible to threats such as corrosion or third party damage. In addition, outside of pipe or equipment replacement an operator has little to no influence on these issues that are pre-existing in the pipe due to legacy manufacturing or construction practices.
+The value of decision trees is, as in the name implies, in making decisions.  In the above scenario, if a pipeline operator wanted to have the largest impact on their risk, in this case, they should concentrate on their third party and external corrosion threats since outside of pipe replacement, there are limited actions that would affect the manufacturing threat.  In fact, it has been argued that manufacturing, construction and equipment are not "threats" in the sense that a threat is is an independent "force" that has an impact on a pipeline but rather weaknesses that make the it more susceptible to threats such as corrosion or third party damage. In addition, outside of pipe or equipment replacement an operator has little to no influence on these issues that are pre-existing in the pipe due to legacy manufacturing or construction practices.
 
 Since the over-arching goal of integrity management is to reduce the risk on the pipeline system, combined with limited options to reduce the three "weaknesses", it would make would be prudent to revisit the risk decision tree.  This time it will be created based on the exact same dataset as above, but this time sans the weaknesses creating a decision tree with only threats that the operator has influence over.
 
@@ -74,6 +74,7 @@ rpart.plot::rpart.plot(risk_tree, nn=F, box.palette = "GnBu",shadow.col="gray",b
 The tree based on threats alone didn't change the largest threats identified except for natural hazard (Nhaz).  But what it did do is give a better picture of where the break-point of the highest threats are without the weaknesses included in the analysis.  Now the highest risk segments are when third party threat exceeds 0.55 rather than 0.42 as before.  What this does is limit the scope of your highest risk lines from anything exceeding 42% to exceeding 55% now.  Making a smaller population of 14% (the sum of the **TP<0.55** branches) of the segments versus 31% (sum of the **TP<0.42** branches) to deal with in a risk reduction program.
 
 We have seen how decision trees can be used to learn about a system's risk and how it can be used to make choices in a integrity program.  But since pipeline systems are not one single entity with identical information along its entire length and between different lines within the system, we have to be able to make decisions on a line by line basis.  The next section will make use of this same information in a more granular way to look at one particular Route.
+
 ```{r Route29, echo=FALSE, message=FALSE}
 risk <- read.csv("risk_fix.csv")
 risk <- subset(risk, RouteId==29)
@@ -87,4 +88,4 @@ At the individual route level, once again third party and external corrosion sho
 In the same way that this was applied to an individual route, it is an identical process to use the PoF for an individual threat along with its associated variables to learn what is driving it at an individual threat level.  It would allow an operator to answer such questions as; for third party threat, is one-call activity or class location a bigger factor?  Or for external corrosion, does coating type or age make a larger contribution to the threat?
 
 ###Conclusion
-Pipeline risk analysis generates large volumes of data that can be overwhelming to attempt to digest simply by looking over the seemingly endless tables of numbers.  But unknowingly, your data has a story to tell that is buried within all those numbers.  By using techniques such as this it coaxes the story out of it and gives actionable information on what is driving risk on a system-wide or individual route level.
+Pipeline risk analysis generates large volumes of data that can be overwhelming to attempt to digest simply by looking over the seemingly endless rows and columns of numbers.  But unknowingly, your data has a story to tell that is buried within all those numbers.  By using techniques such as this, it coaxes the story out of it and gives actionable information on what is driving your system-wide, individual route level or threat specific risk.
