More work on the tree R code and explaination

--- a/decision-trees.Rmd
+++ b/decision-trees.Rmd
@@ -93,12 +93,7 @@ Pipeline risk analysis generates large volumes of data that can be overwhelming 
 ###Creating a Decision Tree
 Although it's is technically possible to create one of these with a spreadsheet I wouldn't recommend it.  To do so would mean programming complex algorithms and having to modify them for different size datasets and parameters each time.  Fortunately there are far better solutions that are more flexible, robust and easier to use.  My weapon of choice is called R.  Yes, the name of it is the letter R, that's it. It's an open source statistical language and environment that is freely available at <https://cran.r-project.org/>  and you will want the companion program R Studio <http://www.rstudio.com> which makes interfacing with R much easier.  You do not have to be a programmer to use it either.  A few simple commands and you are well on your way.  The best thing is that since R is one of the most commonly used tools for statistics and data science there are endless tutorials on whatever subject, from the most basic, to the most advanced that are only a web search away.  Since there are an exceeding abundance of excellent tutorials on the web and the intent is to just introduce R, I won't take up space going into such things as installing R and R Studio and how packages are installed.  None of which is difficult it's just outside the scope here.
 
-In this next section I will show you the commands to complete a decision tree in R.  When you see text in a gray box: 
-```{r exampletext, echo=TRUE}
-#like this
-```
-
-It's an R command that you would type in to the command window.  My example lines of code will all begin with a pound sign (#).  R interprets anything after a pound sign as a comment and doesn't attempt to execute it.  Since I only want to show the code and not execute it, I'll "comment out" all of it, when it comes to the real thing you will enter the code without the pound sign.  Now in the next section I'll show how to create your own regression tree.  After each line of code I'll include a comment (starting with a double pound sign, ##) explaining what it's doing.
+In this next section I will show you the commands to complete a decision tree in R.  When you see text in a gray box `like this`.  It's an R command that you would type in to the command window.  My example code will all begin with a pound sign (#).  R interprets anything after a pound sign as a comment and doesn't attempt to execute it.  Since I only want to show the code and not execute it, I'll "comment out" all of it, when it comes to creating yours enter the code without the pound sign.  Now in the next section I'll show how to create a regression tree.  After each line of code I'll include a comment (starting with a double pound sign, ##) explaining what it's doing.
 
 ```{r regressionTreeExample, echo=TRUE, message=FALSE}
 #library(rpart)
@@ -114,9 +109,9 @@ It's an R command that you would type in to the command window.  My example line
 #risk_tree <- rpart(PoF~EC+IC+SCC+TP+IO+Nhaz, data = risk_pof,control = c(cp=0.02))
 ##This executes the "rpart" command from the rpart library loaded on the first line and assigns the name of "risk_tree" to it.
 #####Function Arguments#####
-##(PoF~EC+IC+SCC+TP+IO+Nhaz): This tells the rpart command that the PoF variable is dependent on (~) all the variables following it
+##(PoF~EC+IC+SCC+TP+IO+Nhaz): This is the formula that indicates that PoF is dependent on (~) all the variables following it.  It takes the form of outcome ~ predictor1+predictor2+predictor3+etc.
 ##(data = risk_pof): Where is the data coming from?  Tells it the name of the dataframe to get the variables
-##(control = c(cp=0.02)): More on the meaning of this later.
+##(control = c(cp=0.02)): This is an optional parameter that controls the "growth" of the tree. cp is a cost complexity factor.  More on why this is needed later.
 
 #rpart.plot(risk_tree)
 ##Creates a plot of the decsion tree in the above command line
@@ -124,4 +119,10 @@ It's an R command that you would type in to the command window.  My example line
 
 ```
 
+###Decision Trees and Complexity
+Decision trees are a great tool for exploring your data and revealing interactions that were not apparent.  But like anything there's no free lunch.  The one Achilles heel of decision trees is that they can overfit the data creating overly complex trees. Overfitting is is equivalent to a baseball statistic that that is quoted as, "Left handed pitchers that lead with their right foot when they take the field on a second Tuesday in a month with five weeks and the temperature is 70 degrees or more, will have a 20% better ERA.".  While if I had a large enough set of data over a long enough period of time this might be true, but does it really mean anything?  It might have correlation but the causation is questionable at best and the value of trying to predict future performance is roughly nil.
+
+The same thing can happen with decision trees based on a large set of data if they are allowed to grow uncontrolled.  Fortunately, there are ways to prune your tree to keep it from growing wild.  In the code example above, recall the command: `rpart(PoF~EC+IC+SCC+TP+IO+Nhaz, data = risk_pof,control = c(cp=0.02))`.  This is where the `control=c(cp=0.02)` comes in use.  The `cp = some number` is one of many parameters to control the splitting to splitting of groups into smaller and smaller, less relevant groups.  cp is complexity parameter that limits how complex the tree grows.  By using this parameter each time the tree splits, it has to essentially add enough "value" to overcome this cp factor.  If the proposed split doesn't doesn't decrease the lack of  fit by more than `cp` the proposed split is rejected.  There is no exact number that works every time, it depends on the amount of data and how many variables are being considered.  I generally start with around a `cp=0.1` and gradually decrease it until I am satisfied with the tree results.  Increasing it will make the tree less complex, decreasing it will allow a more complex tree.  I realize that "satisfied" is an imprecise measure but what you are trying to achieve is final groups that have a relevant number of samples in them.  If you have a very large number of data points and very small groups the tree is likely too complex. There are more precise ways of determine the correct complexity of tree but that's the beyond the scope of this article.  
+
+The `cp` factor is only one way of controlling it.  There are other controls that are more intuitive.  Such as the `minsplit= some number` control parameter.  What this does is requires a minimum size of a group before the algorithm will attempt to split it.  For instance in the 1 million dyn-seg risk example I might want to set the `minsplit=10000` so I don't end up with any groups that are smaller than a 1% of the population.  If I was working with a data set that only had a thousand records I would set it to something like maybe 30 or 40, depending if I wanted to drill down to smaller details or I wanted a higher level look.  Creating decision trees with R is very easy and there are reams of tutorials online as well as an extensive help system built in that can guide you through the some of the more esoteric details that I have barely touched on here.  The best way to learn this is to jump in with your own data and try it.  If you have additional questions or want to discuss it further [email me](mailto:pipeintegrity@outlook.com).
 
